opam-version: "2.0"
name: "ocaml-archive"
version: "2.8.4+3"
synopsis: "Binding to libarchive"
description: """
  libarchive is a C library for reading and writing tar, cpio, zip, ISO, and
  other archive formats. This library is its OCaml bindings.
  .
   * Reads a variety of formats, including tar, pax, cpio, zip, xar, lha, ar,
     cab, mtree, and ISO images.
   * Writes tar, pax, cpio, zip, xar, ar, ISO, mtree, and shar archives.
   * Full automatic format detection when reading archives, including
     compressed archives.
  .
  [libarchive website](http://code.google.com/p/libarchive/)
"""
maintainer: "Sylvain Le Gall"
authors: "Sylvain Le Gall"
license: "LGPL-2.1 with OCaml linking exception"
homepage: "https://github.com/gildor478/ocaml-archive"
bug-reports: "https://github.com/gildor478/ocaml-archive/issues"
dev-repo: "git+https://github.com/gildor478/ocaml-archive.git"
depends: [ "ocaml" "dune" "archive" "lwt" {>= "2.3.2"} ]
build: ["dune" "build" "-p" name "-j" jobs]

